<?xml version="1.0" encoding="utf-8"?>



    <FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="xyz.k4czp3r.trustnotify.user_interface.FragmentAbout">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/f_about_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="64dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/f_about_textView_appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/app_name"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/f_about_textView_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/creator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/f_about_textView_appName" />

                <TextView
                    android:id="@+id/f_about_textView_contributors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/contributors"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/f_about_textView_creator" />

                <TextView
                    android:id="@+id/f_about_textView_contributors_names"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contributors_names"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/f_about_textView_contributors" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/support_me"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/f_about_textView_contributors_names" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:singleLine="false">

                    <!-- Chips can be declared here, or added dynamically. -->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/chip_cocacola"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_money"
                        android:text="@string/inapp_p_eat" />
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/chip_eat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_money"
                        android:text="@string/inapp_p_cocacola" />
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/chip_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_money"
                        android:text="@string/inapp_p_change" />
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
